Add initial support for generating riscv_vector.h using tablegen

--- a/clang/utils/TableGen/CMakeLists.txt
+++ b/clang/utils/TableGen/CMakeLists.txt
@@ -19,5 +19,6 @@ add_tablegen(clang-tblgen CLANG
   NeonEmitter.cpp
   SveEmitter.cpp
   TableGen.cpp
+  RISCVEmitter.cpp
   )
 set_target_properties(clang-tblgen PROPERTIES FOLDER "Clang tablegenning")
